--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,21 +103,12 @@ body::-webkit-scrollbar {
 }
 
 // API Status and Search warnings (Search IGDB) - - - - - - - - - - - - - - - //
-.api-status {
-    text-align: right;
-
-    // left: 15px !important;
-}
-
-.search-warnings {
-    text-align: right;
-}
-
-.errors-dropdown {
+.errors {
     background-color: #666666de;
     border-radius: 5px;
     padding: 7px;
     text-align: left;
+
     p {
         font-size: 12px;
         color: #fff;
@@ -134,6 +125,46 @@ body::-webkit-scrollbar {
         color: #fff;
         padding-left: 0px;
     }
+}
+
+.api-status {
+    @extend .errors;
+
+    .status-label {
+        font-size: 14px;
+        border-bottom: 1px solid #fff;
+    }
+
+    .status-label + td {
+        border-bottom: 1px solid #fff;
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    td {
+        font-size: 12px;
+        color: #fff;
+
+    }
+
+    td.values {
+        text-align: right;
+    }
+
+    hr {
+        margin: 3px 0px 3px 0px;
+    }
+}
+
+.api-status.uk-dropdown.uk-open.uk-dropdown-right-center {
+    margin-left: 30px;
+}
+
+.errors.uk-dropdown.uk-open.uk-dropdown-left-center {
+    margin-left: -20px;
 }
 
 // Search Dropodown (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - //
