--- a/app/views/static_pages/_search_errors.html.erb
+++ b/app/views/static_pages/_search_errors.html.erb
@@ -1,6 +1,6 @@
 <% if @inquiry.errors.any? %>
   <span id="search-errors" class="uk-form-icon warning-icon blink_me" uk-icon="warning"></span>
-  <div class="errors-dropdown" uk-dropdown="toggle: #search-errors; pos: left-center; mode: click; animation: uk-animation-scale-up; delay-hide: 0; duration: 100">
+  <div class="errors" uk-dropdown="toggle: #search-errors; pos: left-center; mode: hover; animation: uk-animation-scale-up; delay-hide: 0; duration: 100">
     <% errors = @inquiry.errors.full_messages %>
     <% if errors.size == 1 %>
       <p>Please <%= errors.first %></p>
