--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -394,6 +394,7 @@ body::-webkit-scrollbar {
     margin: 0px;
     font-size: 12px;
     font-style: italic;
+    max-width: 200px;
 }
 
 .game-cover {
@@ -530,6 +531,84 @@ footer ul li {
     margin-left: 10px;
 }
 
+// Developers, Characers - - - - - - - - - - - - - - - - - - - - - - - - - - -//
+
+.game-space {
+    position: relative;
+
+    .extra-info {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        color: #313131;
+        font-size: 14px;
+        font-style: italic;
+        background: rgba(255, 255, 255, 0.75);
+        padding: 3px 0px 3px 0px;
+    }
+}
+
+.ex-info {
+    box-sizing: border-box;
+    width: 100%;
+    max-height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
+    margin: 0px;
+    background: #fff;
+    border-radius: 0px 0px 3px 3px;
+    color: #666666;
+    font-size: 14px;
+    font-style: italic;
+    word-wrap: break-word;
+
+    .uk-alert-close {
+        opacity: 1;
+    }
+}
+
+
+.ex-info2 {
+    @extend .ex-info;
+
+    border-radius: 0px 3px 0px 3px;
+    font-size: 14px;
+    padding: 5px 10px 5px 10px;
+
+    width: auto;
+    max-width: 100%;
+
+    svg {
+        width: 10px;
+    }
+
+    .uk-alert-close {
+        opacity: 1;
+        position: static;
+    }
+}
+
+.ex-info3 {
+    @extend .ex-info2;
+    top: 0;
+    bottom: unset;
+    padding: 5px 8px 5px 8px;
+    border-radius: 3px 0px 3px 0px;
+    background: #000000;
+    color: #d2d2d2;
+    svg {
+        width: 12px;
+        transform: translateY(-2px) !important;
+    }
+    label {
+    padding-right: 5px;
+    }
+}
+
+
 // Strike - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .strike {
     display: block;
@@ -563,4 +642,25 @@ footer ul li {
     margin-left: 10px;
 }
 
-// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
+///////////////////// tests
+///
+
+/* Float */
+.hvr-float {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+}
