--- a/app/views/static_pages/_cover.html.erb
+++ b/app/views/static_pages/_cover.html.erb
@@ -3,7 +3,7 @@
        draggable: "false", width: options[:width])%>
 
 <% if game["xtra"] %>
-  <div class="ex-info" uk-alert>
+  <div class="xtra-info" uk-alert>
     <button class="uk-alert-close uk-icon uk-close" type="button" uk-close></button>
     <p><%= game["xtra"] %></p>
   </div>
