--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,5 @@
-<div class="uk-margin-left uk-margin-right">
-<footer class="footer">
-  <nav>
-    <ul>
-        <li><%= link_to "About", root_path %></li>
-    </ul>
-  </nav>
+<footer>
+  <ul>
+    <li><%= link_to "?", root_path, class: "about-link" %></li>
+  </ul>
 </footer>
-</div>
