--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,10 +2,11 @@
   <nav class="uk-navbar-container uk-navbar-transparent uk-dark" uk-navbar>
     <div class="uk-navbar-left">
       <ul class="uk-navbar-nav">
-        <li><%= link_to "YVGC", root_path %></li>
+        <li>
+<%= link_to "> STILL HAVE THEM", root_path %></li>
       </ul>
     </div>
     <div class="uk-navbar-center">
     </div>
   </nav>
-<!-- </div> -->
+
