--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -54,7 +54,7 @@
         <label class="options-labels"><%= f.check_box(:erotic, checked: "unchecked", class: "uk-checkbox") %><span>Erotic games</span></label>
       </div>
       <div class="search-tip">
-        <a class="uk-link-muted" uk-toggle="target: #examples; animation: uk-animation-fade">You can use * for prefix, postfix and infix search.
+        <a class="uk-link-muted" uk-toggle="target: #examples; animation: uk-animation-fade">You can use * for wildcard search.
         </a>
       </label>
       <div id="examples" hidden>
