--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -7,7 +7,7 @@
   <%= hidden_field_tag :last_input, @inquiry.last_input %>
   <%= hidden_field_tag :last_offset, @inquiry.offset %>
   <%= submit_tag "Load more...",
-  class: "uk-button uk-button-default show-more-button",
+  class: "uk-button uk-button-default md-button",
   data: { disable_with: "Please wait..." } %>
   <% end %>
 </div>
