--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% provide(:title, 'sign up') %>
+<% provide(:button_text, 'Create account') %>
+<%= render 'form', path: 'signup_path' %>
+
