--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,16 @@
       <a class="uk-button uk-button-default md-button" href="#">Log in</a>
       <%= link_to "Sign up", signup_url, class: "uk-button uk-button-default md-button" %>
     </p>
-  </div>
 
+    <%= link_to 'Sign up modal', signup_path,  {:remote => true, "uk-toggle" => "target: #modal-center", class: 'uk-button uk-button-default md-button'}  %>
+    <div id="modal-center" class="uk-flex-top" uk-modal>
+      <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+        <button class="uk-modal-close-default" type="button" uk-close></button>
+        <div class="modal-content"></div>
+      </div>
+    </div>
+
+  </div>
   <div class="uk-width-auto keep">
     <h3>Keep track of your games!</h3>
     <p>Bad things can happen to them if you forget about them.</p>
